# CCSC-Recruitments

./: .gitignore  README.md  ecosystem.config.js  index.html  login.css  login.html  pyproject.toml  register.html  requirements.txt  run.sh  run_client.sh  server_tests.sh
.github/workflows/: server_tests.yml
assets/: responsive.css  style.css
assets/css/: responsive.css  style.css
assets/js/: main.js
client/: package-lock.json  package.json
client/public/: Project Proposal for RAIN WATER HARVESTING SYSTEM (1).docx  index.html
client/src/: App.js  index.js
client/src/Routes/: Routes.js
client/src/component/: PrivateRoute.js
client/src/component/forgot/: Forgot.css  Forgot.js
client/src/component/form/: Form.css  Form.js
client/src/component/home/: Home.css  Home.js
client/src/component/login/: Login.css  Login.js
client/src/component/navAfter/: NavAfter.css  NavAfter.jsx
client/src/component/navbar/: Navbar.css  Navbar.jsx
client/src/errors/: error.js
client/src/utils/: AxiosSendRequest.js
server/: test_runner.py
server/apis/: __init__.py  checks.py  definitions.py  models.py  urls.py  views.py
server/authentication/: __init__.py  checks.py  definitions.py  issue_jwt.py  middleware.py  models.py  utils.py  views.py
server/core/: errorfactory.py  settings.py  urls.py  views.py
server/core/email/: __init__.py  email_config.json  emails.py
server/tests/: base.py  test_authentication.py  test_resetpassword.py  test_task_submission.py  test_task_submissions.py  test_user_registration.py  test_webhook.py
(+20 files in other folders)
