[tool.poetry]
name = "CodeChef SRM Recruitments"
version = "0.1.0"
description = "Recruitments Portal"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.8"
djangorestframework = "^3.12.4"
gunicorn = "^20.1.0"
dnspython = "^2.1.0"
pymongo = "^3.12.0"
python-dotenv = "^0.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
