[tool.poetry]
name = "CodeChef SRM Recruitments"
version = "0.1.0"
description = "Recruitments Portal"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.8"
djangorestframework = "^3.12.4"
gunicorn = "^20.1.0"
dnspython = "^2.1.0"
pymongo = "^3.12.0"
python-dotenv = "^0.19.1"
black = "^21.9b0"
schema = "^0.7.4"
PyJWT = "^2.2.0"
requests = "^2.26.0"
django-cors-headers = "^3.10.0"
Jinja2 = "^3.0.2"
psutil = "^5.8.0"
sentry-sdk = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
